--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ blockquote, q {
   
   /* ヒーロースタイル */
   .full-hero {
-    background-color: red;
+    background-color: #c7dbfc;
     height: 50vh;
   }
   
@@ -121,5 +121,19 @@ blockquote, q {
   }
   .bio-copy {
     font-size: 1em;
+  }
+  .header-nav{
+    float: right;
+    padding: 5.5vh 60px 0 0;
+  }
+  .header-nav > li{
+    display: inline-block;
+    margin-left: 1em;
+  }
+  .header-nav a{
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
   }
   
