--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -1,1 +1,9 @@
-Hello again, World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>{{ page.title }}</title>
+</head>
+<body>
+  {{ content }}
+</body>
+</html>
